AM_CPPFLAGS = @AM_CPPFLAGS@
src_dir = $(top_srcdir)/tools/cc90hfe

SUBDIRS = src

EXTRA_DIST = \
	include/option.h \
	include/port.h \
	include/encode.h \
	include/std.h \
	include/defs.h \
	include/serial.h \
	include/cc90.h \
	include/main.h \
	include/ini.h \
	include/win \
	include/win/progress.h \
	include/win/gui.h \
	include/win/resource.h \
	include/linux \
	include/linux/progress.h \
	include/linux/gui.h \
	include/errors.h \
	include/hfe.h
